tests/negative/regression/r34.orng
fn main() -> Int {
    let a: &main
} 
